package com.daw.CinemaDaw.domain.cinema;

public enum SeatType {
    STANDARD, 
    PREMIUM, 
    ADAPTED;
    

    

}
