package com.daw.CinemaDaw.domain.cinema.user;

public enum Role {
 
    ADMIN,
    CLIENT
}
